--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -18,12 +18,11 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application code
 COPY app/ ./app/
 
-# Create non-root user
-RUN useradd -m -u 1000 appuser && \
-    chown -R appuser:appuser /app
-
-# Switch to non-root user
-USER appuser
+# Create non-root user (but run as root for volume write access)
+# Note: For production, consider fixing volume permissions instead
+# RUN useradd -m -u 1000 appuser && \
+#     chown -R appuser:appuser /app
+# USER appuser
 
 # Expose port
 EXPOSE 18888
