--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -18,9 +18,14 @@ COPY . .
 # Build argument for API URL
 # Note: In Docker, the browser (client-side) needs to access backend via host
 # So we use window.location.hostname fallback, or set this to empty to use fallback
-# For Portainer/external access, you may want to set this to your NAS hostname:18888
+# For Portainer/external access, you may want to set this to your NAS hostname:PORT
 ARG REACT_APP_API_URL=
 ENV REACT_APP_API_URL=$REACT_APP_API_URL
+
+# Build argument for backend API port (used by frontend to connect to backend)
+# This should match BACKEND_PORT from docker-compose.yml
+ARG REACT_APP_API_PORT=18888
+ENV REACT_APP_API_PORT=$REACT_APP_API_PORT
 
 # Build the React app
 RUN npm run build
@@ -28,20 +33,30 @@ RUN npm run build
 # Stage 2: Serve with nginx
 FROM nginx:alpine
 
-# Copy custom nginx configuration
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+# Install gettext for envsubst
+RUN apk add --no-cache gettext
+
+# Copy nginx config template
+COPY nginx.conf.template /etc/nginx/templates/default.conf.template
+
+# Copy entrypoint script
+COPY docker-entrypoint.sh /docker-entrypoint.sh
+RUN chmod +x /docker-entrypoint.sh
 
 # Copy built files from builder stage
 COPY --from=builder /app/build /usr/share/nginx/html
 
-# Create non-root user (nginx already runs as nginx user)
-# Expose port
-EXPOSE 18889
+# Default port (can be overridden via environment variable)
+ARG NGINX_PORT=8889
+ENV NGINX_PORT=${NGINX_PORT}
 
-# Health check
+# Expose port (will be set dynamically)
+EXPOSE ${NGINX_PORT}
+
+# Health check (port will be set via env var at runtime)
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD wget --quiet --tries=1 --spider http://localhost:18889/ || exit 1
+    CMD sh -c "wget --quiet --tries=1 --spider http://localhost:$$NGINX_PORT/ || exit 1"
 
-# Start nginx
-CMD ["nginx", "-g", "daemon off;"]
+# Use custom entrypoint
+ENTRYPOINT ["/docker-entrypoint.sh"]
 
