feat: add domain-based API routing with nginx proxy
- Frontend automatically detects domain access and uses /api path
- Nginx proxies /api requests to backend container
- Works seamlessly with any domain - users only need one reverse proxy rule
- Falls back to IP:port for direct access (IP/localhost)
- Updated docker-entrypoint to pass BACKEND_PORT to nginx config
- Updated docker-compose to expose BACKEND_PORT to frontend container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,8 @@ services:
     environment:
       # Frontend nginx port (must match the port mapping above)
       - NGINX_PORT=${FRONTEND_PORT:-8889}
+      # Backend port for nginx proxy configuration
+      - BACKEND_PORT=${BACKEND_PORT:-18888}
     depends_on:
       - backend
     restart: unless-stopped
