Security: Remove password reset script and enhance .gitignore
- Remove scripts/reset_password.py (security risk - allowed unauthenticated password reset)
- Add manual password recovery procedure to README.md
- Enhance .gitignore with test coverage, Docker override, and temporary file patterns
- Update security documentation to reflect password reset script removal
- Add comprehensive pre-commit security review documentation

Security improvements:
- No password reset scripts in repository (requires server access for recovery)
- Enhanced .gitignore patterns for better repository hygiene
- Updated security audit documentation

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@ syno_key.key
 syno_session.json.enc
 data/
 
+# Web authentication files (contains password hashes)
+config/.web_auth.json
+.web_auth.json
+
 # Python
 __pycache__/
 *.py[cod]
@@ -53,4 +57,42 @@ logs/
 # OS
 .DS_Store
 Thumbs.db
+
+# Testing & Coverage
+.coverage
+.coverage.*
+htmlcov/
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+.tox/
+coverage.xml
+*.cover
+.hypothesis/
+
+# Docker
+docker-compose.override.yml
+docker-compose.override.yaml
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+*.backup
+*.old
+*.orig
+*.save
+
+# Frontend build artifacts (already in frontend/.gitignore, but adding here for completeness)
+frontend/build/
+frontend/.pnp
+frontend/.pnp.js
+frontend/coverage/
+
+# Local environment files
+.env.local
+.env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
 
