feat: Add session persistence and reorganize project for open source
Features:
- Add encrypted session persistence to disk (survives restarts)
- Add session expiry cleanup on startup
- Add config volume mount in docker-compose

Project organization:
- Move test files from scripts/ to tests/ directory
- Add tests/README.md with test documentation
- Update .gitignore to exclude test backup files
- Add open source security audit documentation

Technical changes:
- Implement load_web_sessions() and save_web_sessions() functions
- Add cleanup_expired_sessions() for startup cleanup
- Update all session operations to persist to disk
- Sanitize test_login.py to not print actual passwords
- Add config directory volume mount for Docker

Security:
- All sessions encrypted with Fernet
- File permissions set to 600 (owner-only)
- Graceful handling of corrupted session files
- Comprehensive security audit documentation

--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,10 @@ docker-compose.override.yaml
 *.orig
 *.save
 
+# Test backup files
+tests/**/*.backup*
+tests/**/*.enc.backup*
+
 # Frontend build artifacts (already in frontend/.gitignore, but adding here for completeness)
 frontend/build/
 frontend/.pnp
@@ -95,4 +99,7 @@ frontend/coverage/
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Local deployment scripts (user-specific)
+scripts/build-on-nas.sh
 
