--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     volumes:
       - ./data:/app/data
       - ./logs:/app/logs
+      - ./config:/app/config
     environment:
       # Required: Synology NAS Configuration
       - SYNOLOGY_NAS_URL=${SYNOLOGY_NAS_URL}
