--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,13 @@ version: '3.8'
 
 services:
   backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-      args:
-        # Backend port (default: 18888, can be changed)
-        - BACKEND_PORT=${BACKEND_PORT:-18888}
+    image: ghcr.io/devwareh/syno-reverse-proxy-backend:v1.0.0
+    # Uncomment below to build from source instead of using published image
+    # build:
+    #   context: ./backend
+    #   dockerfile: Dockerfile
+    #   args:
+    #     - BACKEND_PORT=${BACKEND_PORT:-18888}
     container_name: syno-reverse-proxy-backend
     ports:
       - "${BACKEND_PORT:-18888}:${BACKEND_PORT:-18888}"
@@ -53,19 +54,15 @@ services:
       - syno-network
 
   frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-      args:
-        # Backend API URL for frontend to connect to
-        # Leave empty to use window.location.hostname fallback (recommended)
-        # Or set to your NAS hostname:PORT for fixed URL
-        - REACT_APP_API_URL=
-        # Backend API port (must match BACKEND_PORT)
-        # Frontend uses this to connect to backend API
-        - REACT_APP_API_PORT=${BACKEND_PORT:-18888}
-        # Frontend port (default: 8889, can be changed)
-        - NGINX_PORT=${FRONTEND_PORT:-8889}
+    image: ghcr.io/devwareh/syno-reverse-proxy-frontend:v1.0.0
+    # Uncomment below to build from source instead of using published image
+    # build:
+    #   context: ./frontend
+    #   dockerfile: Dockerfile
+    #   args:
+    #     - REACT_APP_API_URL=
+    #     - REACT_APP_API_PORT=${BACKEND_PORT:-18888}
+    #     - NGINX_PORT=${FRONTEND_PORT:-8889}
     container_name: syno-reverse-proxy-frontend
     ports:
       - "${FRONTEND_PORT:-8889}:${FRONTEND_PORT:-8889}"
