feat: Add SSL verification and comprehensive security hardening
Security Improvements:
- Add configurable SSL/TLS certificate verification (SYNOLOGY_SSL_VERIFY)
- Replace all hardcoded verify=False with configurable ssl_verify parameter
- Sanitize error messages to prevent information disclosure
- Restrict CORS methods from wildcard to explicit list
- Add comprehensive nginx security headers (CSP, HSTS, Referrer-Policy)
- Hide nginx version information (server_tokens off)
- Add DoS protection timeouts and request size limits

Code Quality:
- Replace commented debug prints with proper Python logging
- Improve device ID persistence logic with fallback
- Add debug scripts for troubleshooting authentication issues

New Files:
- scripts/reset_session.sh: Reset Synology session for troubleshooting
- scripts/debug_did.py: Test device token authentication
- scripts/debug_with_otp.py: Test OTP authentication
- tests/test_*.py: Comprehensive security test suite (8 files)

Changes:
- backend/app/core/config.py: Add synology_ssl_verify setting (default: true)
- backend/app/core/synology.py: Add ssl_verify parameter and logging
- backend/app/core/auth.py: Improve device ID fallback logic
- backend/app/api/routes/auth.py: Sanitize error messages, use ssl_verify
- backend/app/api/dependencies.py: Pass ssl_verify to manager
- backend/app/main.py: Restrict CORS methods to explicit list
- frontend/nginx.conf: Add security headers and DoS protection
- docker-compose.yml: Update to latest tags for development

Breaking Changes: None
Default behavior is secure (SSL verification enabled)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   backend:
-    image: ghcr.io/devwareh/syno-reverse-proxy-backend:v1.0.0
+    image: ghcr.io/devwareh/syno-reverse-proxy-backend:latest
     # Uncomment below to build from source instead of using published image
     # build:
     #   context: ./backend
@@ -54,7 +54,7 @@ services:
       - syno-network
 
   frontend:
-    image: ghcr.io/devwareh/syno-reverse-proxy-frontend:v1.0.0
+    image: ghcr.io/devwareh/syno-reverse-proxy-frontend:latest
     # Uncomment below to build from source instead of using published image
     # build:
     #   context: ./frontend
