--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -36,6 +36,25 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
+    # API Reverse Proxy
+    # This proxies API requests to the backend container, avoiding CORS issues
+    location ~ ^/(auth|rules|import-export|version|docs|openapi.json) {
+        proxy_pass http://backend:18888;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Increase timeout for long-running imports/exports
+        proxy_read_timeout 300s;
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
+    }
+
     # Handle React Router (SPA routing)
     location / {
         try_files $uri $uri/ /index.html;
