--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,7 +69,7 @@ services:
     ports:
       - "${FRONTEND_PORT:-8889}:${FRONTEND_PORT:-8889}"
     volumes:
-      - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./frontend/nginx.conf.template:/etc/nginx/templates/default.conf.template:ro
     environment:
       # Frontend nginx port (must match the port mapping above)
       - NGINX_PORT=${FRONTEND_PORT:-8889}
