--- a/frontend/nginx.conf.template
+++ b/frontend/nginx.conf.template
@@ -15,32 +15,24 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
 
-    # Proxy API requests to backend
-    # Strip /api prefix before proxying (trailing slash in proxy_pass strips location prefix)
-    location /api/ {
-        proxy_pass http://backend:${BACKEND_PORT}/;
+    # API Reverse Proxy
+    # This proxies API requests to the backend container, avoiding CORS issues.
+    # We match the top-level API routes directly.
+    location ~ ^/(auth|rules|import-export|version|docs|openapi.json) {
+        proxy_pass http://backend:${BACKEND_PORT};
         proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        
-        # CORS headers (handled by backend, but adding here for safety)
-        add_header Access-Control-Allow-Origin * always;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-        
-        # Handle preflight requests
-        if ($request_method = OPTIONS) {
-            return 204;
-        }
-    }
-    
-    # Handle /api without trailing slash (redirect to /api/)
-    location = /api {
-        return 301 /api/;
+
+        # Increase timeout for long-running imports/exports
+        proxy_read_timeout 300s;
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
     }
 
     # Cache static assets
