fix(security): Remove default admin credentials to force setup flow

--- a/config/.env.example
+++ b/config/.env.example
@@ -36,11 +36,10 @@ SYNOLOGY_PASSWORD=your_password
 # OPTIONAL: Web UI Authentication
 # =============================================================================
 
-# Web UI username (default: admin)
-# APP_USERNAME=admin
-
-# Web UI password (default: admin - CHANGE THIS IN PRODUCTION!)
-# APP_PASSWORD=your_secure_password
+# Web UI Authentication
+# If these are left blank or unset, you will be prompted to create an admin account on first launch.
+# APP_USERNAME=
+# APP_PASSWORD=
 
 # Session secret key (auto-generated if not provided)
 # APP_SESSION_SECRET_KEY=
