docs: Update docker-compose comment to reflect setup wizard default

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - SYNOLOGY_DEVICE_NAME=${SYNOLOGY_DEVICE_NAME:-}
       # Optional: Session expiry in seconds (default: 518400 = 6 days)
       - SYNOLOGY_SESSION_EXPIRY_SECS=${SYNOLOGY_SESSION_EXPIRY_SECS:-518400}
-      # Web UI Authentication (defaults to admin/admin - CHANGE IN PRODUCTION!)
+      # Web UI Authentication (leave empty to use Setup Wizard)
       - APP_USERNAME=${APP_USERNAME}
       - APP_PASSWORD=${APP_PASSWORD}
       # Optional: Session secret key (auto-generated if not provided)
