--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dsmreverseproxy",
-  "version": "1.0.1",
+  "version": "1.3.0",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
@@ -15,6 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "sync-version": "node scripts/sync-version.js",
+    "prebuild": "npm run sync-version",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
