--- a/config/.env.example
+++ b/config/.env.example
@@ -71,3 +71,13 @@ SYNOLOGY_PASSWORD=your_password
 
 # Frontend web port
 # FRONTEND_PORT=8889
+
+# =============================================================================
+# OPTIONAL: User/Group IDs (Docker only)
+# =============================================================================
+
+# Set PUID and PGID to match your host user for proper file ownership
+# Run 'id' on your host to find your UID and GID
+# If not set, container runs as root (works but less secure)
+# PUID=1000
+# PGID=1000
