ci: optimize workflows - publish only on tags, verify builds on every push
- Modified docker-publish.yml to only trigger on version tags (v*.*.*)
- Added Docker build verification to ci.yml (builds but doesn't push)
- Saves GitHub Actions minutes by not publishing on every commit
- Ensures :latest tag always points to a stable release
- Build issues are still caught early via CI verification

Benefits:
- Cleaner package registry (only releases)
- Reduced resource usage
- Better separation of CI (testing) vs CD (deployment)
- Follows industry best practices

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,10 +1,12 @@
 name: Docker Publish
 
+# Only publish Docker images on version tags (releases)
+# This saves GitHub Actions minutes and ensures only stable releases are published
+# Manual publishing is still available via workflow_dispatch
 on:
   push:
-    branches: [main]
-    tags: ['v*.*.*']
-  workflow_dispatch:
+    tags: ['v*.*.*']  # Only trigger on version tags like v1.4.1
+  workflow_dispatch:  # Allow manual trigger from GitHub UI
 
 env:
   REGISTRY: ghcr.io
