--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,3 +117,27 @@ jobs:
           name: bandit-security-report
           path: bandit-report.json
           if-no-files-found: ignore
+
+  docker-build-test:
+    name: Docker Build Verification
+    runs-on: ubuntu-latest
+    needs: [backend-tests, frontend-build]
+    strategy:
+      matrix:
+        component: [backend, frontend]
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build ${{ matrix.component }} Docker image (no push)
+        uses: docker/build-push-action@v5
+        with:
+          context: ./${{ matrix.component }}
+          push: false  # Don't push, just verify it builds
+          tags: test-${{ matrix.component }}:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
